--- a/src/assets/styles/tailwind/index.css
+++ b/src/assets/styles/tailwind/index.css
@@ -5,16 +5,16 @@
 @layer base {
 	:root {
 		--neutral: #ffffff;
-		--primary: #2a85ff;
+		--primary: #63559A;
 		--primary-deep: #0069f6;
 		--primary-mild: #4996ff;
-		--primary-subtle: #2a85ff1a;
+		--primary-subtle: #63559A1a;
 		--error: #ff6a55;
 		--error-subtle: #ff6a551a;
 		--success: #10b981;
 		--success-subtle: #05eb7624;
-		--info: #2a85ff;
-		--info-subtle: #2a85ff1a;
+		--info: #63559A;
+		--info-subtle: #63559A1a;
 		--warning: #f59e0b;
 		--warning-subtle: #ffd40045;
 		--gray-50: #fafafa;
@@ -32,16 +32,16 @@
 
 	.dark {
 		--neutral: #ffffff;
-		--primary: #2a85ff;
+		--primary: #63559A;
 		--primary-deep: #0069f6;
 		--primary-mild: #4996ff;
-		--primary-subtle: #2a85ff1a;
+		--primary-subtle: #63559A1a;
 		--error: #ff6a55;
 		--error-subtle: #ff6a551a; 
 		--success: #10b981;
 		--success-subtle: #05eb7624;
-		--info: #2a85ff;
-		--info-subtle: #2a85ff1a;
+		--info: #63559A;
+		--info-subtle: #63559A1a;
 		--warning: #f59e0b;
 		--warning-subtle: #ffd40045;
 		--gray-50: #fafafa;
